# models

./: .gitignore  .pre-commit-config.yaml  .python-version  CLA.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  horovod.yml  index.html  pyproject.toml  pytest.ini  rees46_schema_modified.pbtxt  reproducing_T4Rec_results.ipynb  requirements-dev.txt  results.txt  setup.cfg  setup.py  tox.ini  train_and_save_model_for_benchmarking.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  release-drafter.yml
.github/ISSUE_TEMPLATE/: --new-model-addition.md  bug-report.md  documentation-request.md  feature-request.md  submit-question.md  task.md
.github/workflows/: blossom-ci.yml  ci.yml  (+34 more)
T4Rec_repro/: reproducing_T4Rec_results.ipynb  reproducing_T4Rec_results_v1.ipynb  train_and_save_model_for_benchmarking-Copy1.ipynb  train_and_save_model_for_benchmarking-inference-on-CPU.ipynb  train_and_save_model_for_benchmarking.ipynb  train_and_save_model_for_benchmarking_works.ipynb
ci/: build_and_test.sh  get_changed_backends.py  ignore_codespell_words.txt  lint_tensorflow.sh  pr.gpu.Jenkinsfile  test_integration.sh  test_unit.sh
docs/: README.md
examples/:  Retrieval models (Movielens-1m)- Youtube-DNN retrieval model example.ipynb  01-Getting-started.ipynb  01-getting-started.ipynb  02-Merlin-Models-and-NVTabular-applying-to-your-own-dataset.ipynb  02-Merlin-Models-and-NVTabular-integration.ipynb  03-Exploring-different-models.ipynb  04-Exporting-ranking-models.ipynb  04-Retrieval-Model.ipynb  05-Advanced-define-your-own-architecture.ipynb  05-Retrieval-Model.ipynb  05-Retrieval-model.ipynb  06-Define-your-own-architecture-with-Merlin-Models.ipynb  07-Train-a-third-party-model-using-the-Merlin-Models-API.ipynb  07-Train-traditional-ML-models-using-the-Merlin-Models-API.ipynb  08-Accelerate-training-of-larege-embedding-tables-by-LazyAdam.ipynb  08-Train-a-model-for-session-based-next-item-prediction.ipynb  09-Incremental-Training-with-Different-Learning-Rates-and-Layer-Freezing.ipynb  Advanced-Building-your-own-architecture.ipynb  Advanced-define-your-own-architecture.ipynb  Exploring-different-models.ipynb  ItemRetrieval-TwoTower.ipynb  README.md  README.rst  Retrieval-Models.ipynb  TestDLRM_ModelsTF.ipynb  TestDLRM_ModelsTorch.ipynb  ecommerce-session-based-next-item-prediction-for-fashion.ipynb  example_utils.py  fit_transform.py  music_streaming.ipynb  music_streaming.py  save_visualize.py
main/: .buildinfo  CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  getting_started.html  index.html  models_overview.html  objects.inv  search.html  searchindex.js
merlin_models/: _version.py  mypy.py  types.py
merlin_standard_lib/: __init__.py  registry.py
requirements/: base.txt  dev.txt  distributed-environment.yml  docs.txt  gpu.txt  horovod-cpu-environment.yml  horovod-gpu-environment.yml  horovod.txt  lightfm.txt  nvtabular.txt  pytorch.txt  tensorflow.txt  test.txt  transformers.txt  xgboost.txt
scripts/: generate_synthetic_data.py
stable/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html  searchindex.js
tests/: conftest.py
v0.10.0/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  objects.inv  search.html  searchindex.js
v0.11.0/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  objects.inv  search.html  searchindex.js
v0.2.0/: .buildinfo  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js
v0.3.0/: .buildinfo  CONTRIBUTING.html  README.html  api.html  genindex.html  index.html  models_overview.html  objects.inv  search.html  searchindex.js
v0.4.0/: .buildinfo  CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html  searchindex.js
v0.5.0/: .buildinfo  CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html  searchindex.js
v0.6.0/: .buildinfo  CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html  searchindex.js
v0.7.0/: .buildinfo  CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html  searchindex.js
v0.8.0/: .buildinfo  CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html  searchindex.js
v0.9.0/: .buildinfo  CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  objects.inv  search.html  searchindex.js
v23.02.00/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  objects.inv  search.html  searchindex.js
v23.04.00/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html  searchindex.js
v23.05.00/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html
v23.05.dev0/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html
v23.06.00/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  objects.inv  search.html  searchindex.js
v23.08.00/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html
v23.08.01/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html
v23.12.00/: CONTRIBUTING.html  README.html  additional_resources.html  api.html  genindex.html  index.html  models_overview.html  search.html  searchindex.js
(+3761 files in other folders)
