[metadata]
name = merlin-models
version = 0.0.1
author = NVIDIA Corporation
description = Merlin recommender system models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NVIDIA-Merlin/models
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering

[options]
# package_dir =
    # = src
packages = find:
python_requires = >=3.6

[flake8]
max-line-length = 100
exclude = build,.eggs,*_pb2.py
ignore = E203, W503

[flake8_nb]
max-line-length = 120
ignore = E203, E402, W503