[metadata]
name = merlin-models
version = 0.0.1
author = NVIDIA Corporation
description = Merlin recommender system models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NVIDIA-Merlin/models
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering

[options]
# package_dir =
# = src
packages = find:
python_requires = >=3.6

[options.packages.find]
# where = src

[flake8]
max-line-length = 100
ignore = E203,W503
exclude = build,.eggs

[versioneer]
VCS = git
style = pep440
versionfile_source = merlin_models/_version.py
versionfile_build = merlin_models/_version.py
tag_prefix = v
parentdir_prefix = merlin-models-

